--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -3,7 +3,7 @@ version: stable
 version-script: git -C parts/thefeck/build describe --abbrev=0 --tags
 summary: Magnificent app which corrects your previous console command.
 description: |
-  The Fuck tries to match a rule for the previous command,
+  The Feck tries to match a rule for the previous command,
   creates a new command using the matched rule and runs it.
 
 grade: stable
